db.core/src/main/java/com/tools/data/db/sql/lexer/SQLParser.java
/* Generated By:JavaCC: Do not edit this line. SQLParser.java */
package com.tools.data.db.sql.lexer;

import java.util.ArrayList;

import com.tools.data.db.sql.querymodel.*;

public class SQLParser implements SQLParserConstants {

  public static void main(String args[]) throws ParseException {
      SQLParser parser = new SQLParser(System.in);
      QueryNode query = parser.SQLQuery();
//      System.out.println("Query generated from model: ");
//      System.out.println(query.genText());
  }

// select-clause from-clause where-clause groupby-clause having-clause orderby-clause
  final public QueryNode SQLQuery() throws ParseException {
//    System.out.println("parse query");
    SelectNode s=null;
    FromNode f=null;
    WhereNode w = null;
    OrderByNode o=null;
    GroupByNode g=null;
    HavingNode h=null;
    // Select List
        s = SQLSelect();
    // Table Expression
        // Each clause takes table from previous clause, produces table for next clause
        f = SQLFrom();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WHERE:
      w = SQLWhere();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case GROUP:
      g = SQLGroupBy();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case HAVING:
      h = SQLHaving();
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ORDER:
      o = SQLOrderBy();
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(0);
        {if (true) return new QueryNode(s, f, w, g, h, o);}
    throw new Error("Missing return statement in function");
  }

// SELECT [ quantifier ] column (, column)*
  final public SelectNode SQLSelect() throws ParseException {
    ArrayList selctItemList=new ArrayList();
    String q="ALL";
    ColumnItem item = null;
    jj_consume_token(SELECT);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ALL:
    case DISTINCT:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ALL:
        jj_consume_token(ALL);
                      q="ALL";
        break;
      case DISTINCT:
        jj_consume_token(DISTINCT);
                      q="DISTINCT";
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    item = SQLColumnItem();
          selctItemList.add(item);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 42:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_1;
      }
      jj_consume_token(42);
      item = SQLColumnItem();
          selctItemList.add(item);
    }
        {if (true) return new SelectNode(selctItemList, q);}
    throw new Error("Missing return statement in function");
  }

  final public ColumnItem SQLColumnItem() throws ParseException {
    ColumnItem item = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AVG:
      jj_consume_token(AVG);
             item = SQLSetFunction(SetFunction.AVG);
      break;
    case COUNT:
      jj_consume_token(COUNT);
                 item = SQLSetFunction(SetFunction.COUNT);
      break;
    case MAX:
      jj_consume_token(MAX);
               item = SQLSetFunction(SetFunction.MAX);
      break;
    case MIN:
      jj_consume_token(MIN);
               item = SQLSetFunction(SetFunction.MIN);
      break;
    case SUM:
      jj_consume_token(SUM);
               item = SQLSetFunction(SetFunction.SUM);
      break;
    case ORDINARY_ID:
    case DELIMITED_ID:
    case MYSQL_DELIMITED_ID:
    case 43:
      item = SQLColumn();
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
        {if (true) return item;}
    throw new Error("Missing return statement in function");
  }

// * | [ tablename . ] columnname
// ToDo: Add semantic processing for elided tablenames
  final public ColumnNode SQLColumn() throws ParseException {
    Identifier tableName=null, columnName=null, schemaName=null, derivedColName=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 43:
      jj_consume_token(43);
           columnName = new Identifier("*", false);
      break;
    default:
      jj_la1[8] = jj_gen;
      if (jj_2_1(4)) {
        schemaName = identifier();
        jj_consume_token(44);
        tableName = identifier();
        jj_consume_token(44);
        columnName = identifier();
      } else if (jj_2_2(2)) {
        tableName = identifier();
        jj_consume_token(44);
        columnName = identifier();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ORDINARY_ID:
        case DELIMITED_ID:
        case MYSQL_DELIMITED_ID:
          columnName = identifier();
          break;
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AS:
    case ORDINARY_ID:
    case DELIMITED_ID:
    case MYSQL_DELIMITED_ID:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AS:
        jj_consume_token(AS);
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      derivedColName = identifier();
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
        {if (true) return ColumnNode.make(tableName, columnName, schemaName, derivedColName);}
    throw new Error("Missing return statement in function");
  }

  final public SetFunction SQLSetFunction(int type) throws ParseException {
    ColumnNode c = null;
    Identifier alias = null;
    jj_consume_token(45);
    c = SQLColumn();
    jj_consume_token(46);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AS:
    case ORDINARY_ID:
    case DELIMITED_ID:
    case MYSQL_DELIMITED_ID:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AS:
        jj_consume_token(AS);
        break;
      default:
        jj_la1[12] = jj_gen;
        ;
      }
      alias = identifier();
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
        {if (true) return new SetFunction(type, c, alias);}
    throw new Error("Missing return statement in function");
  }

// FROM table-reference [, table-reference]
  final public FromNode SQLFrom() throws ParseException {
    ArrayList tableList = new ArrayList();
    JoinTableNode jt=null;
    jj_consume_token(FROM);
    jt = SQLFirstJoinTable();
      tableList.add(jt);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CROSS:
      case FULL:
      case INNER:
      case LEFT:
      case JOIN:
      case NATURAL:
      case OUTER:
      case RIGHT:
      case 42:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_2;
      }
      jt = SQLJoinTable();
      tableList.add(jt);
    }
      {if (true) return new FromNode(tableList);}
    throw new Error("Missing return statement in function");
  }

// GROUP by grouping-column [, grouping-column ]
  final public GroupByNode SQLGroupBy() throws ParseException {
    ArrayList columnList=new ArrayList();
    ColumnItem col;
    jj_consume_token(GROUP);
    jj_consume_token(BY);
    col = SQLColumnItem();
      columnList.add(col);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 42:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_3;
      }
      jj_consume_token(42);
      col = SQLColumnItem();
        columnList.add(col);
    }
        {if (true) return new GroupByNode(columnList);}
    throw new Error("Missing return statement in function");
  }

// HAVING search-condition
  final public HavingNode SQLHaving() throws ParseException {
    Expression cond;
    jj_consume_token(HAVING);
    cond = SQLOrExpr();
        {if (true) return new HavingNode(cond);}
    throw new Error("Missing return statement in function");
  }

  final public JoinTableNode SQLFirstJoinTable() throws ParseException {
    TableNode tbl;
    tbl = SQLTable();
      {if (true) return new JoinTableNode(tbl);}
    throw new Error("Missing return statement in function");
  }

  final public JoinTableNode SQLJoinTable() throws ParseException {
    String joinType=null;
    Expression cond=null;
    TableNode tbl;
    joinType = SQLJoinType();
    tbl = SQLTable();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ON:
      jj_consume_token(ON);
      cond = SQLOrExpr();
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
        {if (true) return new JoinTableNode(tbl, joinType, cond);}
    throw new Error("Missing return statement in function");
  }

// tableName [ [ AS ] corrName ]
  final public TableNode SQLTable() throws ParseException {
    Identifier tableName=null, corrName=null, schemaName=null;
    if (jj_2_3(2)) {
      schemaName = identifier();
      jj_consume_token(44);
      tableName = identifier();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ORDINARY_ID:
      case DELIMITED_ID:
      case MYSQL_DELIMITED_ID:
        tableName = identifier();
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AS:
    case ORDINARY_ID:
    case DELIMITED_ID:
    case MYSQL_DELIMITED_ID:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AS:
        jj_consume_token(AS);
        break;
      default:
        jj_la1[18] = jj_gen;
        ;
      }
      corrName = identifier();
      break;
    default:
      jj_la1[19] = jj_gen;
      ;
    }
            {if (true) return TableNode.make(tableName, corrName, schemaName);}
    throw new Error("Missing return statement in function");
  }

  final public String SQLJoinType() throws ParseException {
    String type=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 42:
      jj_consume_token(42);
              type = "CROSS";
      break;
    case CROSS:
    case FULL:
    case INNER:
    case LEFT:
    case JOIN:
    case NATURAL:
    case OUTER:
    case RIGHT:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CROSS:
      case FULL:
      case INNER:
      case LEFT:
      case NATURAL:
      case OUTER:
      case RIGHT:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CROSS:
          jj_consume_token(CROSS);
                      type = "CROSS";
          break;
        case INNER:
          jj_consume_token(INNER);
                      type = "INNER";
          break;
        case NATURAL:
          jj_consume_token(NATURAL);
                        type = "NATURAL";
          break;
        case FULL:
        case LEFT:
        case OUTER:
        case RIGHT:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case FULL:
          case LEFT:
          case RIGHT:
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case LEFT:
              jj_consume_token(LEFT);
                       type = "LEFT OUTER";
              break;
            case RIGHT:
              jj_consume_token(RIGHT);
                        type = "RIGHT OUTER";
              break;
            case FULL:
              jj_consume_token(FULL);
                       type = "FULL OUTER";
              break;
            default:
              jj_la1[20] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
            break;
          default:
            jj_la1[21] = jj_gen;
            ;
          }
          jj_consume_token(OUTER);
                      type = "LEFT OUTER";
          break;
        default:
          jj_la1[22] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[23] = jj_gen;
        ;
      }
      jj_consume_token(JOIN);
                   if (type==null) type="INNER";
      break;
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
      {if (true) return type;}
    throw new Error("Missing return statement in function");
  }

// WHERE <Expression>
  final public WhereNode SQLWhere() throws ParseException {
    Expression o;
    jj_consume_token(WHERE);
    o = SQLOrExpr();
        {if (true) return new WhereNode(o);}
    throw new Error("Missing return statement in function");
  }

// An arbitrary search-condition, in a WHERE or ON clause
// We assume, without loss of generality, that the search-condition
// is in Disjunctive Normal Form (DNF)
// If join is true, we are in a join clause, and only allow columns as primitive

// [(] <AndExpr> [ OR <AndExpr>] [)]
  final public Expression SQLOrExpr() throws ParseException {
//    System.out.println("SQLOrExpr");
    Expression c=null;
    if (jj_2_4(2147483647)) {
      c = SQLOr();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 45:
        jj_consume_token(45);
        c = SQLOrExpr();
        jj_consume_token(46);
        break;
      default:
        jj_la1[25] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
        {if (true) return c;}
    throw new Error("Missing return statement in function");
  }

  final public Expression SQLOr() throws ParseException {
//    System.out.println("SQLOr");
    Expression a;
    ArrayList forms = new ArrayList();
    a = SQLAndExpr();
          forms.add(a);
    label_4:
    while (true) {
      if (jj_2_5(2)) {
        ;
      } else {
        break label_4;
      }
      jj_consume_token(OR);
      a = SQLOrExpr();
          forms.add(a);
    }
        if (forms.size()==1)
            {if (true) return a;}
        else
            {if (true) return new OrNode(forms);}
    throw new Error("Missing return statement in function");
  }

// [(] <NotExpr> [ AND <NotExpr>] [)]
  final public Expression SQLAndExpr() throws ParseException {
//    System.out.println("SQLAndExpr");
    Expression c=null;
    if (jj_2_6(2147483647)) {
      c = SQLAnd();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 45:
        jj_consume_token(45);
        c = SQLOrExpr();
        jj_consume_token(46);
        break;
      default:
        jj_la1[26] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
        {if (true) return c;}
    throw new Error("Missing return statement in function");
  }

  final public Expression SQLAnd() throws ParseException {
//    System.out.println("SQLAnd");
    Expression c;
    ArrayList forms = new ArrayList();
    c = SQLNot();
      forms.add(c);
    label_5:
    while (true) {
      if (jj_2_7(2)) {
        ;
      } else {
        break label_5;
      }
      jj_consume_token(AND);
      c = SQLAndExpr();
      forms.add(c);
    }
        if (forms.size()==1)
            {if (true) return c;}
        else
            {if (true) return new AndNode(forms);}
    throw new Error("Missing return statement in function");
  }

// [ NOT ] <Predicate>
  final public Expression SQLNot() throws ParseException {
//    System.out.println("SQLNot");
    Expression p;
    boolean foundNot=false;
    if (jj_2_8(2)) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NOT:
        jj_consume_token(NOT);
            foundNot = true;
        break;
      default:
        jj_la1[27] = jj_gen;
        ;
      }
      jj_consume_token(45);
      p = SQLOrExpr();
      jj_consume_token(46);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AVG:
      case COUNT:
      case MAX:
      case MIN:
      case NOT:
      case SUM:
      case ORDINARY_ID:
      case DELIMITED_ID:
      case MYSQL_DELIMITED_ID:
      case STRING_LITERAL:
      case INTEGER_LITERAL:
      case 43:
      case 47:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOT:
          jj_consume_token(NOT);
            foundNot = true;
          break;
        default:
          jj_la1[28] = jj_gen;
          ;
        }
        p = SQLPredicate();
        break;
      default:
        jj_la1[29] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
      if (!foundNot)
          {if (true) return p;}
      else
          {if (true) return new NotNode(p);}
    throw new Error("Missing return statement in function");
  }
